lanecwe-Prod/src/objects/Product__c.object
<CustomObject>
    <description>Master Table Used to store Product information</description>
    <fields>
        <fullName>Add__c</fullName>
        <description>Field added as per the new PDF requirement</description>
        <label>AudioMinutes</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addon_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>x-Addon_External_ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addon_Feature_Name_External__c</fullName>
        <label>Addon/Feature Name External</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Rate1__c</fullName>
        <label>Auth Rate1</label>
        <precision>11</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auth_Rate2__c</fullName>
        <label>Auth Rate2</label>
        <precision>11</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auth_Rate3__c</fullName>
        <label>Auth Rate3</label>
        <precision>11</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authority_Level__c</fullName>
        <label>Authority Level</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bid_Price__c</fullName>
        <label>Bid Price</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channels__c</fullName>
        <label>x-Channel</label>
        <picklist>
            <controllingField>Regions__c</controllingField>
            <picklistValues>
                <fullName>ADM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Conferencing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fin&amp;Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunters CEUR/NEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunters WEUR/SEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Operations</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContractDocumentGroup__c</fullName>
        <label>ContractDocumentGroup</label>
        <picklist>
            <picklistValues>
                <fullName>010 PGi Licensed Services Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>311 PGi Licensed Services Pricing - Dial Out To Mobile Surcharge Per Minute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>030 PGi Web Meeting Services Per Minute Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>040 Unattended Audio – Domestic Local Access and Dial Out By Group - Unbundled / Standalone Per Minute Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>050 Unattended Audio – International Dial Out and Local Access By Group - Unbundled / Standalone Per Minute Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>060 Unattended Audio – International Toll Free Service and International Dial Out By Group - Unbundled / Standalone Per Minute Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>070 Unattended Audio - International Dial Out By Country Charges - The Following Country Specific Charges Supercede Those Referenced In Corresponding Unattended Audio International Dial Out Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>080 Unattended Audio - International Local Access Charges By Location  - The Following Location Specific Charges Supercede Corresponding Unattended Audio International Dial Out Groups &amp; Countries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>090 Unattended Audio – International Toll Free Service and International Dial Out Charges By Country - The Following Country Specific Charges Supercede Those Referenced In Corresponding Unattended Audio Toll Free &amp; International Dial Out Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>025 Unattended Audio Conferencing – Unbundled / Standalone Per Minute Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>026 Unattended Audio Conferencing - Enhanced Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 Operator Assisted Conferencing – Per Minute &amp; Enhanced Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130 Operator Assisted Conferencing – Per Minute Rates - PremiereCall Auditorium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140 Operator Assisted Conferencing – Per Minute Rates - PremiereCall Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150 Operator Assisted Conferencing – Per Minute Rates - Investor Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>160 Operator Assisted Conferencing – Per Minute Rates - PremiereCall Connection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>170 Operator Assisted Conferencing – Enhanced Services Pricing - PremiereCall Auditorium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180 Operator Assisted Conferencing – Enhanced Services Pricing - PremiereCall Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>190 Operator Assisted Conferencing – Enhanced Services Pricing - Investor Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200 Operator Assisted Conferencing – Enhanced Services Pricing - PremiereCall Connection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210 Operator Assisted Conferencing – Enhanced Services Pricing - During Call Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220 Operator Assisted Conferencing – Enhanced Services Pricing - SoundByte Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230 Operator Assisted Conferencing – Enhanced Services Pricing - Cancel/Reschedule/No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>240 Operator Assisted Conferencing – Enhanced Services Pricing - Other Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250 Audio Committment - Unbundled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>260 Operator Assisted - International Dial Out Charges By Group - Per Minute Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>270 Operator Assisted - International Dial Out Charges By Country - The Following Country Specific Charges Supercede Those Referenced In International Dial Out Groups In Above Section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>280 Operator Assisted - International Toll Free Charges By Group - Per Minute Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>290 Operator Assisted - International Toll Free Charges By Country - The Following Country Specific Charges Supercede Those Referenced In International Toll Free Groups In Above Section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300 Non-contiguous US Call Charges</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Code__c</fullName>
        <label>Cost Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Currency__c</fullName>
        <label>Cost Currency</label>
        <picklist>
            <picklistValues>
                <fullName>New Zealand Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Us Dollars</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Rate__c</fullName>
        <label>Cost Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Description__c</fullName>
        <label>x-Customer Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InstallmentPayment__c</fullName>
        <label>InstallmentPayment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Rate__c</fullName>
        <label>List Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaxMeeting__c</fullName>
        <description>Field added as per the new requirement</description>
        <label>MaxMeeting</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Quantity__c</fullName>
        <label>Maximum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meet_Authority_Level__c</fullName>
        <label>Meet Authority Level</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Min_Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to calculate the current TCV value while reporting.</description>
        <label>Min. Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Quantity__c</fullName>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_License_ContractDocumentGroup__c</fullName>
        <description>Used for determining the order of display for subsections in the Non-Licensed Services Schedule Section of Contracts</description>
        <inlineHelpText>Used for determining the order of display for subsections in the Non-Licensed Services Schedule Section of Contracts</inlineHelpText>
        <label>Non-License ContractDocumentGroup</label>
        <picklist>
            <picklistValues>
                <fullName>001 TEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>005 Automated Conferencing Pricing - Enhanced Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>010 Automated Conferencing - Domestic Dial In and Dial Out - Per Minute Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>011 NON-LICENSED - Unattended Audio – Domestic Local Access and Dial Out By Group - Unbundled / Standalone Per Minute Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>020 Automated Conferencing – International Dial Out and Local Access - Per Minute Rates (Inc. Alaska, Hawaii, and U.S. Possessions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>025 Automated Conferencing – International Dial Out by Country  - Per Minute Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>030 NON-LICENSED - Unattended Audio – International Toll Free Service and International Dial Out - Unbundled / Standalone Per Minute Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>035 Automated Conferecing - International Local Access Per Minute Rates By Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>036 Automated Conferencing – International Toll Free Service and International Dial Out - Per Minute Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>037 Automated Conferencing – International Toll Free Service and International Dial Out By Country - Per Minute Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>040 Dial Out To Mobile Surcharge Per Minute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>042  Operator Assisted Conferencing – Per Minute &amp; Enhanced Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>043  Operator Assisted Conferencing – Per Minute Rates - PremiereCall Auditorium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>044  Operator Assisted Conferencing – Per Minute Rates - PremiereCall Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>045  Operator Assisted Conferencing – Per Minute Rates - Investor Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>046  Operator Assisted Conferencing – Per Minute Rates - PremiereCall Connection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>047  Operator Assisted Conferencing – Enhanced Services Pricing - PremiereCall Auditorium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>048  Operator Assisted Conferencing – Enhanced Services Pricing - PremiereCall Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>049  Operator Assisted Conferencing – Enhanced Services Pricing - Investor Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>050  Operator Assisted Conferencing – Enhanced Services Pricing - PremiereCall Connections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>051  Operator Assisted Conferencing – Enhanced Services Pricing - During Call Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>052  Operator Assisted Conferencing – Enhanced Services Pricing - SoundByte Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>053  Operator Assisted Conferencing – Enhanced Services Pricing - Cancel/Reschedule/No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>053  Operator Assisted Conferencing – Enhanced Services Pricing - Going Over Scheduled Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>054  Operator Assisted Conferencing – Enhanced Services Pricing - Other Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>055  Audio Committment - Unbundled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>056  Operator Assisted - International Dial Out Charges By Group - Per Minute Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>057  Operator Assisted - International Dial Out Charges By Country - The Following Country Specific Charges Supercede Those Referenced In International Dial Out Groups In Above Section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>058  Operator Assisted - International Toll Free Charges By Group - Per Minute Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>059  Operator Assisted - International Toll Free Charges By Country - The Following Country Specific Charges Supercede Those Referenced In International Dial Out Groups In Above Section</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_License__c</fullName>
        <label>Number of License</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>PGI_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <description>Unique code for Products</description>
        <label>Add On/ Feature Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <inlineHelpText>WIP
Service = Top Level Add-on
Add-on = related to ????
Ancillary = related to ???</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancillary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity_x_LFR</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <label>Regions_x_LFR</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC18ID__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC 18 PGI Add On/ Feature ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOTS_Code__c</fullName>
        <label>SOTS Billable Items ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionTerms__c</fullName>
        <label>SubscriptionTerms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_License_Type__c</fullName>
        <label>Subscription License Type</label>
        <picklist>
            <picklistValues>
                <fullName>iMeet Bundled 2k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMeet Bundled-10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMeet Unbundled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalMeet Active Host</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalMeet Bundled-10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalMeet Bundled-1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlobalMeet Unbundled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Price__c</fullName>
        <label>Target Price</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Length__c</fullName>
        <label>Term Length(Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Count__c</fullName>
        <label>Test Count</label>
        <summaryForeignKey>Add_on_FeatureContractTerms__c.Add_on_Feature__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measure_Temp__c</fullName>
        <description>No For Use</description>
        <label>Unit Type (Temp Fix For Prod Selection)</label>
        <picklist>
            <picklistValues>
                <fullName>Licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minute</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measure__c</fullName>
        <label>Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Minute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancillary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>360 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 Minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dial Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prompt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Host</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ValueOverTerm__c</fullName>
        <label>ValueOverTerm</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contract_not_supported_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created as part of UAT requirement</description>
        <inlineHelpText>If set this prevents a contract from being created.    WIP</inlineHelpText>
        <label>contract_not_supported_SFDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPGILicense__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Tier 1, or a license this should be checked.  WIP</inlineHelpText>
        <label>isPGILicense</label>
        <type>Checkbox</type>
    </fields>
    <label>Add-on/Feature</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ALL_Contains_Globalmeet</fullName>
        <columns>NAME</columns>
        <columns>Auth_Rate1__c</columns>
        <columns>Auth_Rate2__c</columns>
        <columns>Auth_Rate3__c</columns>
        <columns>Auth_Rate6__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>globalmeet</value>
        </filters>
        <label>ALL Contains Globalmeet</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ALL_Contains_iMeet</fullName>
        <columns>NAME</columns>
        <columns>MaxMeeting__c</columns>
        <columns>List_Rate__c</columns>
        <columns>Auth_Rate1__c</columns>
        <columns>Billing_Frequency__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>imeet</value>
        </filters>
        <filters>
            <field>Billing_Frequency__c</field>
            <operation>notEqual</operation>
            <value>Monthly</value>
        </filters>
        <label>ALL Contains iMeet</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ALL_NOT_Contains_iMeet_Globalmeet</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>imeet,globalmeet</value>
        </filters>
        <label>ALL NOT Contains iMeet/Globalmeet</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Service_Type_Active</fullName>
        <columns>NAME</columns>
        <columns>ProductType__c</columns>
        <columns>Billing_Frequency__c</columns>
        <columns>Unit_Of_Measure__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ProductType__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <label>Type = Service &amp; Active</label>
        <language>en_US</language>
    </listViews>
</CustomObject>